--- a/app/src/main/res/layout/activity_java_bahcesi_button3_2.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button3_2.xml
@@ -4,92 +4,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/simge"
-    tools:context=".JavaBahcesi1.JavaBahcesiButton1_3">
+    android:background="@drawable/simgeturuncu"
+    tools:context=".JavaBahcesi3.JavaBahcesiButton3_2">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
+        android:id="@+id/textView20"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Ekrana yazı yazdırmak için 'System.out.println' fonksiyonunu kullanıyoruz. 'Hello World' yazdıralım. "
+        android:text="Hangisi float veri tipinde değildir ? "
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnCevap3_2_1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="System.out.println('Hello World');"
+        android:background="@color/colorPrimary"
+        android:onClick="cevapDogru3_2_1"
+        android:text="4"
+        android:textColor="@color/colorAccent"
+
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+    <Button
+        android:id="@+id/btnCevap3_2_2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:onClick="cevapYanlis3_2_2"
+        android:text="3/4"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvCalistir"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/tvCalistir"
-        android:layout_width="400dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text=""
-        android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap3_2_1" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnCevap3_2_3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="calistir"
-        android:text="Çalıştır"
+        android:background="@color/colorPrimary"
+        android:onClick="cevapYanlis3_2_3"
+        android:text="4.0"
         android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevam1_3"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevap3_2_4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCalistir" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap3_2_2" />
 
     <Button
-        android:id="@+id/btnDevam1_3"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnCevap3_2_4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="devam1_3"
-        android:text="Devam"
+        android:background="@color/colorPrimary"
+        android:onClick="cevapYanlis3_2_4"
+        android:text="0.75"
         android:textColor="@color/colorAccent"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevap3_2_3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
