--- a/app/src/main/res/layout/activity_java_bahcesi_button3_3.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button3_3.xml
@@ -4,88 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/simge"
-    tools:context=".JavaBahcesi1.JavaBahcesiButton1_4">
+    tools:context=".JavaBahcesi3.JavaBahcesiButton3_3"
+    android:background="@drawable/simgeturuncu"
+    >
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:text="System.out.println(''Efsane'')"
+        android:text="4 + 3.0 + 2 * 3.5"
         android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView22"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="Kod çalıştığında ekrana ne gösterecektir ? "
+        app:layout_constraintBottom_toTopOf="@+id/edCevap3_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+    <EditText
+        android:id="@+id/edCevap3_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Kod çalıştığında ekranda ne gösterecektir ?"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/edCevap1_5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <EditText
-        android:id="@+id/edCevap1_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Yazmaya başla"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistir1_4"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalistir3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
     <Button
-        android:id="@+id/btnCalistir1_4"
+        android:id="@+id/btnCalistir3_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="152dp"
-        android:background="@color/colorPrimary"
-        android:onClick="calistir1_4"
-        android:text="Çalıştır"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:onClick="calistir3_3"
+        android:text="CALIŞTIR"
+        app:layout_constraintBottom_toTopOf="@+id/btnDevam3_3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edCevap3_3" />
 
     <Button
-        android:id="@+id/btnDevam1_4"
+        android:id="@+id/btnDevam3_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="80dp"
-        android:background="@color/colorPrimary"
-        android:onClick="devam1_4"
-        android:text="Devam"
-        android:textColor="@color/colorAccent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        android:onClick="devam3_3"
+        android:text="DEVAM"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistir1_4" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCalistir3_3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
