--- a/app/src/main/res/layout/activity_java_bahcesi_button4_4.xml
+++ b/app/src/main/res/layout/activity_java_bahcesi_button4_4.xml
@@ -34,7 +34,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
-        android:text="0"
+        android:onClick="cevap_4_4_1"
+        android:text="3"
+        android:textSize="24sp"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +53,8 @@
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
         android:text="0"
+        android:textSize="24sp"
+        android:onClick="cevap_4_4_2"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,8 +71,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
-        android:text="0"
+        android:onClick="cevap_4_4_3"
+        android:text="5"
         android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCevap4_4_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -84,8 +90,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@color/colorPrimary"
-        android:text="0"
+        android:onClick="cevap_4_4_4"
+        android:text="6"
         android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
